umol-models-graph/tests/smiles_parsing/snapshots/smiles_parsing__smiles_parsing_suite__run_conformance_test@indigo_0077_C1CC1.S.C1CCC1_CCC.C_.smiles.snap
---
source: umol-models-graph/tests/smiles_parsing/mod.rs
expression: results
---
expected_category: invalid
category: invalid
basic_opensmiles:
  success: false
  error:
    error_type: InvalidToken
    message: Invalid token at position 14
opensmiles:
  success: false
  error:
    error_type: InvalidToken
    message: Invalid token at position 14
